--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="welcome_guide_btn">点击立即进入</string>
+    <string name="main_home">首页</string>
+    <string name="main_tuan">团购</string>
+    <string name="main_search">索搜</string>
+    <string name="index_top_city">选择城市</string>
 </resources>
